[gd_scene load_steps=6 format=3 uid="uid://ciejj62uv8xsk"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cqwk0045e3dvx" path="res://Scenes/Paddle.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://cn8p6k05hri5l" path="res://Assets/fonts/m6x11.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://d4m048t4wkftu" path="res://Assets/audio/hitSound.wav" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Node2D" type="Node2D"]
scale = Vector2(0.987821, 0.982676)
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1215.0
offset_bottom = 815.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.458824, 0.235294, 0.231373, 1)

[node name="Player1" parent="." instance=ExtResource("2")]
position = Vector2(15, 0)

[node name="Player2" parent="." instance=ExtResource("2")]
position = Vector2(1180, 0)

[node name="MiddleField" type="ColorRect" parent="."]
offset_left = 608.0
offset_top = -100.0
offset_right = 611.0
offset_bottom = 900.0
color = Color(0.690196, 0.662745, 0.662745, 1)

[node name="DisplayMessage" type="Label" parent="."]
offset_left = 300.0
offset_top = 500.0
offset_right = 498.0
offset_bottom = 556.0
theme_override_fonts/font = SubResource("1")
text = "Press SPACE to start the game!"

[node name="Player1Score" type="Label" parent="."]
offset_left = 400.0
offset_top = 30.0
offset_right = 442.0
offset_bottom = 114.0
theme_override_fonts/font = SubResource("1")
text = "0"
max_lines_visible = 1

[node name="Player2Score" type="Label" parent="."]
offset_left = 800.0
offset_top = 30.0
offset_right = 842.0
offset_bottom = 114.0
theme_override_fonts/font = SubResource("1")
text = "0"
max_lines_visible = 1

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
